powernap (2.1) unreleased; urgency=low

  * config: Default ACTION to pm-powersave instead of best-effort.

 -- Andres Rodriguez <andreserl@ubuntu.com>  Mon, 24 Jan 2011 11:12:07 -0500

powernap (2.0-0ubuntu1) natty; urgency=low

  [ Andres Rodriguez ]
  * powernap/monitors: Re-work Monitors to integrate them with PowerNap.
  * powernap/powernap.py: Minor fixes to not crash when loading monitors.
  * sbin/powernapd: Integrate Monitors approach to work with Daemon.
  * Update copyright headers for some files
  * Update manpages and add one for powernap-action.
  * Update packaging:
    - debian/control: Add python related fileds.
    - debian/rules: Add dh_pycentral related rules.
  * Add new package to contain new modules and monitors:
    - debian/control: Add package powernap-common.
    - debian/powernap-common.install: Install new files (PowerNap class and
      Monitors); Move action scripts installation to this package.
  * sbin/powernapd: Improve WoL monitor to listen in eth* interfaces.
  * config: Update and cleanup.
  * sbin/powernapd,bin/powerwake: Fix generation of WoL Magic Packet.
    Apparently, more data than required was addeed. (LP: #705943)

 -- Dustin Kirkland <kirkland@ubuntu.com>  Sat, 22 Jan 2011 09:09:04 -0600

powernap (1.12-0ubuntu1) natty; urgency=low

  [ Andres Rodriguez ]
  * Revert Adam changes to some files (rev148 - Original PowerNap behavior)
    - powernapd, powernapd.8, action, config.
  * Re-organize the source and update the packaging:
    - sbin: Moved powernap, powernapd, powernapd-now.
    - bin: Moved powerwake, powernap_calculator.
    - man: Moved manpages here.
    - debian/{powernap,powerwake}.install: Update accordingly.
    - debian/{powernap,powerwake}.manpages: Update accordingly.
    - powernap/monitors: Moved Adam's Monitors.
  * Add new powersave method, using pm-powersave:
    - actions/: Add a set of scripts to reduce power consumption