@@ -69,14 +69,14 @@ DEBUG = 0
 [ProcessMonitor]
 init = "^/sbin/init"
 
-# The [RemoteMonitor] section lists all the UDP port on which to listen
+# The [UDPMonitor] section lists all the UDP port on which to listen
 # for data.
 # Each item listed will bind a UDP port and listen to data.
 # There is no default Remote Monitor.
 # Examples:
 #  udp1024 = 1024
 #  udp9 = 9
-[RemoteMonitor]
+[UDPMonitor]
 #udp9 = 9
 
 # The [IOMonitor] section lists all the processes to Monitor for IO
