@@ -19,7 +19,7 @@
 #    along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 import ConfigParser, sys
-from monitors import ProcessMonitor, InputMonitor, RemoteMonitor, IOMonitor
+from monitors import ProcessMonitor, InputMonitor, UDPMonitor, IOMonitor
 
 
 class PowerNap:
@@ -71,14 +71,14 @@ class PowerNap:
             self.ACTION_METHOD = value
 
     def load_monitors_config(self, monitor, items):
+        print monitor
         if monitor == "ProcessMonitor" or monitor == "IOMonitor" or monitor == "InputMonitor":
             self.MONITORS.append({"monitor":monitor, "name":items[0], "regex":eval(items[1]), "absent":self.ABSENT_SECONDS})
-        if monitor == "RemoteMonitor":
-            # TODO TODO TODO
+        if monitor == "UDPMonitor":
             # If ACTION_METHOD is 4 (PowerSave) and port is 7, do *NOT* create a monitor
             # This will cause that the WoL monitor not to be able to bind the port.
             # TODO: Display a message that port is not being binded!!
-            if self.ACTION_METHOD == 4 and items[1] == 7:
+            if self.ACTION_METHOD == 4 and items[1] != 7:
                 self.MONITORS.append({"monitor":monitor, "name":items[0], "port":eval(items[1]), "absent":self.ABSENT_SECONDS})
 
     def get_monitors(self):
@@ -86,8 +86,8 @@ class PowerNap:
         for config in self.MONITORS:
             if config["monitor"] == "ProcessMonitor":
                 p = ProcessMonitor.ProcessMonitor(config)
-            if config["monitor"] == "RemoteMonitor":
-                p = RemoteMonitor.RemoteMonitor(config)
+            if config["monitor"] == "UDPMonitor":
+                p = UDPMonitor.UDPMonitor(config)
             if config["monitor"] == "InputMonitor":
                 p = InputMonitor.InputMonitor(config)
             if config["monitor"] == "IOMonitor":
